# lash

./: .gitignore  LICENSE  lash.cabal
app/: Main.hs
src/: Lash.hs
src/Lash/: AST.hs  Builtin.hs  Expansion.hs  Instructions.hs  Interactive.hs
src/Lash/AST/: Parser.hs
test/Lash/: ASTSpec.hs
