name:                lash
version:             0.1.0.0
synopsis:            A POSIX shell
-- description:
homepage:            https://github.com/groutcho/lash#readme
license:             BSD3
license-file:        LICENSE
author:              Sébastien Guimmara
maintainer:          sguimmara@pobox.com
copyright:           2017 Sébastien Guimmara
category:            Compilers/Interpreters
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lash
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

executable lash-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , lash
  default-language:    Haskell2010

test-suite lash-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , lash
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/groutcho/lash
